@@ -4,7 +4,7 @@ import de.gwdg.metadataqa.api.util.FileUtils;
 import com.jayway.jsonpath.Configuration;
 import com.jayway.jsonpath.spi.json.JsonProvider;
 import de.gwdg.metadataqa.api.counter.FieldCounter;
-import de.gwdg.metadataqa.api.schema.EdmOaiPmhJsonSchema;
+import de.gwdg.metadataqa.api.schema.edm.EdmOaiPmhJsonSchema;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
@@ -35,11 +35,11 @@ public class TfIdfExtractorTest {
     var extractor = new TfIdfExtractor(new EdmOaiPmhJsonSchema());
     FieldCounter<Double> results = extractor.extract(jsonString, recordId);
     assertEquals(6, results.size());
-    assertEquals(new Double(0.0017653998874690505), results.get("Proxy/dc:title:avg"));
-    assertEquals(new Double(0.008826999437345252), results.get("Proxy/dc:title:sum"));
-    assertEquals(new Double(0), results.get("Proxy/dcterms:alternative:avg"));
-    assertEquals(new Double(0), results.get("Proxy/dcterms:alternative:sum"));
-    assertEquals(new Double(0), results.get("Proxy/dc:description:avg"));
-    assertEquals(new Double(0), results.get("Proxy/dc:description:sum"));
+    assertEquals(Double.valueOf(0.0017653998874690505), results.get("Proxy/dc:title:avg"));
+    assertEquals(Double.valueOf(0.008826999437345252), results.get("Proxy/dc:title:sum"));
+    assertEquals(Double.valueOf(0), results.get("Proxy/dcterms:alternative:avg"));
+    assertEquals(Double.valueOf(0), results.get("Proxy/dcterms:alternative:sum"));
+    assertEquals(Double.valueOf(0), results.get("Proxy/dc:description:avg"));
+    assertEquals(Double.valueOf(0), results.get("Proxy/dc:description:sum"));
   }
 }
